# voice_feature_extraction

./: .env.example  .gitignore  FOLLOWUP_MILESTONES.md  OPENSMILE_FEATURE_OVERVIEW.md  PROJECT_WALKTHROUGH.md  README.md  USER_STORIES.md  pyproject.toml
analysis/: __init__.py  run_analysis.py
analysis/cycle_voice/: __init__.py  associations.py  data_assembly.py  explore.py  features.py  figures.py  html_export.py  paths.py  phases.py  report.py  stage_external.py  stats.py
docs/: HUBERT_PHONOLOGICAL_SUBSPACE_METHODOLOGY.md  PHONEME_PROSODY_EXPERIMENT_GUIDE.md  PHONEME_PROSODY_METHODOLOGY_PRESENTATION.md
docs/voice_cycle_analysis/: DATA_FLOW_DIAGRAMS.md  INDEPENDENT_PATEL_DATA_STORY.md  PATEL_PRESENTATION_SLIDES.md  PATEL_PRESENTATION_STORY.md  REPORT.html  REPORT.md
scripts/: backfill_phoneme_groupings.py  phoneme_order_consistency.py  split_raw_audio_by_task.py
src/speech_feature_extraction/: __init__.py  appwrite_gateway.py  audio_qc.py  cli.py  config.py  constants.py  daily_aggregation.py  geometry_features.py  metadata.py  opensmile_egemaps.py  parquet.py  pipeline.py  snapshot_contract.py  snapshot_publish.py  task_qc.py
src/speech_feature_extraction/phoneme_prosody_experiment/: __init__.py  alignment.py  alignment_quality.py  biomarkers.py  hubert_dprime.py  hubert_extract.py  hubert_phone_config.py  hubert_pipeline.py  pipeline.py  rainbow_inventory.py  rainbow_profile.py  schema.py  segment_features.py  taxonomy.py
src/speech_feature_extraction/snapshot/: __init__.py  contract_schema.py  hashing.py  provenance.py  publisher.py
tests/: conftest.py  test_audio_qc.py  test_contract_bridge.py  test_daily_aggregation.py  test_geometry_features.py  test_hubert_phonological_subspace.py  test_metadata.py  test_opensmile_egemaps.py  test_phoneme_prosody_experiment.py  test_pipeline.py  test_runtime_smoke.py  test_snapshot_contract.py  test_snapshot_publish.py  test_task_qc.py
(+2 files in other folders)
