[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-feature-extraction"
version = "0.1.0"
description = "Reproducible Appwrite speech recording ingestion and openSMILE eGeMAPSv02 feature extraction."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "appwrite",
  "opensmile>=2.5,<3",
  "pandas",
  "praatio>=6.0,<7",
  "pyarrow",
  "python-dotenv",
]

[project.optional-dependencies]
dev = [
  "pytest",
]
# Frozen self-supervised speech model backend for the phonological-subspace
# d-prime experiment (Muller et al. 2026). Kept optional because torch is heavy
# and only the HuBERT path needs it; the rest of the pipeline imports without it.
hubert = [
  "torch>=2.0",
  "torchaudio>=2.0",
  "transformers>=4.30",
  "soundfile>=0.12",
]
analysis = [
    "markdown>=3.10.2",
    "matplotlib>=3.10.9",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
]

[project.scripts]
extract-speech-features = "speech_feature_extraction.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
